--- a/home.html
+++ b/home.html
@@ -33,37 +33,37 @@
     <div class="container">
         <div id="film" class="row justify-content-between mb-4">
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/first.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/first.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/second.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/second.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/3th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/3th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/4th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/4th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/5th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/5th.jpg" class="img-fluid rounded" alt="">
             </div>
         </div>
 
         <div id="films" class="row justify-content-between">
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/6th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/6th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/7th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/7th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/8th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/8th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/9th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/9th.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-md-2 col-sm-4 mb-3">
-                <img src="filmimages/10th.jpg" class="img-fluid rounded" alt="">
+                <img onclick="showFilm()" src="filmimages/10th.jpg" class="img-fluid rounded" alt="">
             </div>
         </div>
     </div>
