add display fun

--- a/home.html
+++ b/home.html
@@ -19,7 +19,8 @@
         </div>
     </header>
 
-    <!-- Search Bar -->
+    <main>
+        <!-- Search Bar -->
     <div id="search_bar" class="my-4 text-center">
         <input id="search" type="text" placeholder="Search..." class="form-control w-50 mx-auto">
     </div>
@@ -32,41 +33,14 @@
     <!-- Movie Images -->
     <div class="container">
         <div id="film" class="row justify-content-between mb-4">
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/first.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/second.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/3th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/4th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/5th.jpg" class="img-fluid rounded" alt="">
-            </div>
+            
         </div>
 
         <div id="films" class="row justify-content-between">
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/6th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/7th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/8th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/9th.jpg" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 mb-3">
-                <img onclick="showFilm()" src="filmimages/10th.jpg" class="img-fluid rounded" alt="">
-            </div>
+           
         </div>
     </div>
+    </main>
 
     <!-- Footer -->
     <footer id="footer" class="text-center py-3">
