add (more info) page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body id="body">
     <!-- Header Section -->
@@ -14,7 +14,7 @@
             <h1 style="color: red; font-size: 80px;">My Movies</h1>
         </div>
         <div id="home" class="text-center">
-            <a href="home.html" class="mx-3">Home</a>
+            <a href="index.html" class="mx-3">Home</a>
             <a href="add.html" class="mx-3">Add</a>
         </div>
     </header>
