--- a/add.html
+++ b/add.html
@@ -13,7 +13,7 @@
         </div>
         
         <div id="home">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
     </div>
 
